# sleuthre

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
plugins/: README.md  find_xor_loops.rhai  rename_alloc_funcs.rhai
re-cli/: Cargo.toml
re-cli/src/: main.rs
re-core/: Cargo.toml
re-core/benches/: analysis.rs
re-core/src/: arch.rs  error.rs  lib.rs  workspace.rs
re-core/src/analysis/: abi.rs  cfg.rs  constants.rs  diff.rs  entropy.rs  functions.rs  mod.rs  passes.rs  pipeline.rs  recompile_diff.rs  stack.rs  strings.rs  struct_inference.rs  type_propagation.rs  vtable.rs  xrefs.rs
re-core/src/collab/: mod.rs
re-core/src/db/: mod.rs
re-core/src/debuggers/: gdb_remote.rs  mod.rs
re-core/src/debuginfo/: dwarf.rs  mod.rs  pdb_parser.rs  source_map.rs  type_mapper.rs  unwind.rs
re-core/src/disasm/: mod.rs
re-core/src/formats/: archive.rs  bytecode.rs  image.rs  mod.rs
re-core/src/il/: hlil.rs  lifter_arm.rs  lifter_arm64.rs  lifter_mips.rs  lifter_riscv.rs  lifter_x86.rs  llil.rs  mlil.rs  mod.rs  ssa.rs  structuring.rs  structuring_switch.rs  structuring_types.rs
re-core/src/import/: bndb.rs  mod.rs  symbols.rs
re-core/src/loader/: mod.rs
re-core/src/memory/: mod.rs  patch.rs
re-core/src/plugin/: mod.rs
re-core/src/project/: mod.rs
re-core/src/scripting/: async_runner.rs  mod.rs  plugin.rs
re-core/src/signatures/: mod.rs
re-core/src/typelib/: builtin.rs  mod.rs
re-core/src/types/: mod.rs
re-core/tests/: fuzz_smoke.rs
re-gui/: Cargo.toml
re-gui/src/: app.rs  dialogs.rs  layout.rs  main.rs  theme.rs
re-gui/src/views/: archives.rs  bytecode.rs  callgraph.rs  data_inspector.rs  debugger.rs  decompiler.rs  diff.rs  disassembly.rs  entropy.rs  exports.rs  graph.rs  graph_utils.rs  hex.rs  image_preview.rs  imports.rs  mod.rs  signatures.rs  source_compare.rs  strings.rs  structures.rs  tabular.rs  xrefs.rs
re-mcp/: Cargo.toml
re-mcp/src/: main.rs
