[workspace]
members = [
    "re-core",
    "re-gui",
    "re-mcp",
    "re-cli",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Aleksandr Pavlov <ckidoz@gmail.com>"]
license = "MIT"
repository = "https://github.com/kidoz/sleuthre"
description = "An open-source reverse engineering desktop application."

[workspace.dependencies]
egui = "0.34"
eframe = "0.34"
re-core = { path = "re-core" }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
goblin = "0.10"
capstone = "0.14"
rusqlite = { version = "0.40", features = ["bundled"] }
petgraph = "0.8"
tracing = "0.1"
bitflags = { version = "2.11", features = ["serde"] }
rfd = "0.17"
uuid = { version = "1.23", features = ["v4", "serde"] }
clap = { version = "4.6", features = ["derive"] }
gimli = "0.33"
object = { version = "0.39", default-features = false, features = ["read"] }
pdb = "0.8"
rhai = "1.25"
egui_dock = "0.19"

[profile.release]
lto = true
strip = true
