[package]
name = "re-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
goblin = { workspace = true }
bitflags = { workspace = true }
anyhow = { workspace = true }
capstone = { workspace = true }
rusqlite = { workspace = true }
petgraph = { workspace = true }
uuid = { workspace = true }
gimli = { workspace = true }
object = { workspace = true }
pdb = { workspace = true }
rhai = { workspace = true }
