[package]
name = "re-gui"
version.workspace = true
edition.workspace = true

[dependencies]
re-core = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
rfd = { workspace = true }
uuid = { workspace = true }
petgraph = { workspace = true }
rhai = { workspace = true }
egui_dock = { workspace = true }
